# duanshipingsdk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CMakeCache.txt  CMakeLists.txt  DEVELOPMENT_PLAN.md  EVALUATION_REPORT_V2.md  EVALUATION_REPORT_V3.md  EVALUATION_REPORT_V4.md  EVALUATION_REPORT_V5.md  EVALUATION_REPORT_V6.md  EVALUATION_REPORT_V7.md  EVALUATION_REPORT_V8.md  Makefile  PROJECT_ARCH_ANALYSIS.md  README.md  VERIFICATION.md  capcut_home.html  commit_all.py  finish.sh  github_issues_for_jules.md  gradle.properties  make_commit.sh  parse_log.py  patch_all_filters.py  patch_filterengine_fix.py  patch_filterengine_node_reuse.py  patch_graph_release.py  patch_test_filter_graph.py  plan_step_5_done.py  settings.gradle  simulator.html  submit.py  test_filter_graph  test_ios.sh  test_render_angle  test_timeline  ui_preview.html
.workbuddy/: overview.md
android/: build.gradle  gradle.properties  settings.gradle
android/src/main/cpp/: AndroidAssetProvider.h  CMakeLists.txt  NativeBridge.cpp  OboeAudioEngine.cpp  OboeAudioEngine.h  TimelineBridge.cpp  TimelineExporterBridge.cpp  TimelinePreviewBridge.cpp  native-lib.cpp
docs/: android-integration.md  dependencies.md  douyin-sdk-benchmark.md  ios-integration.md  release-package.md
ios/: Package.swift  VideoSDK.podspec
sample-android/: build.gradle
scratch/: analyze_ai_ondraw.py  analyze_logcat.py  analyze_ondraw.py  find_command_buffer_ctor.py  find_command_buffer_decl.py  find_native_process.py  find_ondraw_ranges.py  inspect_prop_overlay.py  logcat_filtered.txt  read_logcat.py  search_command_buffer.py  search_gl_error.py
scripts/: build_ffmpeg_android.sh
sdk-android/: build.gradle
sdk-android/android/src/main/cpp/: AndroidAssetProvider.cpp  AndroidAssetProvider.h  CMakeLists.txt  NativeBridge.cpp  OboeAudioEngine.h
sdk-core/: CMakeLists.txt  setup_win.bat  setup_windows_env.ps1  shaders
sdk-core/core/include/: EffectPackageUpdater.h  EffectPlugin.h  Filter.h  FilterEngine.h  FilterFactory.h  Filters.h  FrameBuffer.h  GLStateManager.h  GLTypes.h  PropOverlayFilter.h  ShaderManager.h  ThreadCheck.h
sdk-core/core/include/ai/: AutoSubtitleEngine.h  BeautyFilter.h  BodyEffectFilter.h  BodyPoseDetector.h  ChromaKeyFilter.h  DepthEstimator.h  ExpressionDetector.h  FaceLandmarkDetector.h  FaceReshapeFilter.h  GestureRecognizer.h  HairSegmentationFilter.h  LandmarkSmoother.h  MakeupFilter.h  ObjectTracker.h  ParticleSystem.h  SegmentationFilter.h  StickerRenderer.h  TfliteInferenceEngine.h  VideoStabilizer.h
sdk-core/core/include/audio/: VoiceChangerFilter.h
sdk-core/core/include/pipeline/: Nodes.h  PipelineGraph.h  TimelineNode.h  VideoFrame.h
sdk-core/core/include/rhi/: ExternalTexture.h  GLHardwareTexture.h  IBuffer.h  ICommandBuffer.h  IPipelineState.h  IRenderDevice.h  IRenderPass.h  ITexture.h  RenderDeviceFactory.h
sdk-core/core/include/timeline/: AudioDecoder.h  AudioEffects.h  AudioMixer.h  BlendMode.h  Compositor.h  DecoderPool.h  ExportPreset.h  SmartCoverSelector.h  SplitScreenCompositor.h  SubtitleClip.h  SyncClock.h  TemplateEngine.h  Timeline.h  TimelineDraft.h  TimelineExporter.h  Transition.h  VideoDecoder.h
sdk-core/core/src/: EffectPackageUpdater.cpp  EffectPlugin.cpp  Filter.cpp  FilterEngine.cpp  Filters.cpp  GLStateManager.cpp  PropOverlayFilter.cpp  ShaderManager.cpp
sdk-core/core/src/ai/: AutoSubtitleEngine.cpp  BeautyFilter.cpp  BodyEffectFilter.cpp  BodyPoseDetector.cpp  ChromaKeyFilter.cpp  ExpressionDetector.cpp  FaceLandmarkDetector.cpp  FaceMorphFilter.cpp  FaceReshapeFilter.cpp  GestureRecognizer.cpp  HairSegmentationFilter.cpp  HandLandmarkDetector.cpp  MakeupFilter.cpp  ObjectTracker.cpp  ParticleSystem.cpp  SegmentationFilter.cpp  TfliteInferenceEngine.cpp  VideoStabilizer.cpp
sdk-core/core/src/audio/: VoiceChangerFilter.cpp
sdk-core/core/src/rhi/: GLBuffer.cpp  GLBuffer.h  GLHardwareTexture.cpp  GLRenderDevice.cpp  GLRenderDevice.h  GLShaderProgram.cpp  GLShaderProgram.h  GLTexture.h  GLVertexArray.cpp  RenderDeviceFactory.cpp
sdk-core/core/src/rhi/mtl/: MetalBuffer.h  MetalBuffer.mm  MetalCommandBuffer.h  MetalCommandBuffer.mm  MetalPipeline.h  MetalRenderDevice.h  MetalRenderDevice.mm  MetalShaderProgram.h  MetalTexture.h  MetalTexture.mm  MetalVertexArray.h  MetalVertexArray.mm
sdk-core/core/src/rhi/vk/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertexArray.cpp  VulkanVertexArray.h
sdk-core/core/src/timeline/: AudioDecoderAndroid.cpp  AudioEffects.cpp  AudioMixer.cpp  ColorGradingFilter.cpp  Compositor.cpp  DecoderPool.cpp  DraftAutoSave.cpp  FFmpegVideoDecoder.cpp  HistogramAnalyzer.cpp  SmartCropController.cpp  SplitScreenCompositor.cpp  Timeline.cpp  TimelineExporterAndroid.cpp  VideoDecoderAndroid.cpp
sdk-core/mock_gl/GLES3/: gl3.h
sdk-core/scripts/: check_text_encoding.js  download_ffmpeg_android.ps1  download_ffmpeg_android.sh
sdk-core/scripts/ci/: device_matrix.py
sdk-core/tests/: FilterEngineTestAccessor.h  ssim_calculator.h  test_ai_inference.cpp  test_compute_blur_perf.cpp  test_decoder_pool.cpp  test_douyin_compat.cpp  test_execute_stability_repro.cpp  test_export_e2e.cpp  test_ffmpeg_decoder.cpp  test_filter_graph.cpp  test_headless_ssim.cpp  test_lifecycle.cpp  test_media_compat.cpp  test_phase3_gaps.cpp  test_rebuild_harden.cpp  test_remaining_gaps.cpp  test_rhi_backend.cpp  test_timeline.cpp  test_timeline_node_harden.cpp
sdk-core/tests/mocks/: MockCompositor.cpp
sdk-core/tests/sample_media/: README.md
tests/: FilterEngineTestAccessor.h  local_asset_provider.h  test_ai_inference.cpp  test_decoder_pool.cpp  test_exporter_logic.cpp  test_ffmpeg_decoder.cpp  test_filter_graph.cpp  test_lifecycle.cpp  test_media_compat.cpp  test_phase1_gaps.cpp  test_phase2_gaps.cpp  test_rebuild_harden.cpp  test_remaining_gaps.cpp  test_render_angle.cpp  test_rhi_backend.cpp  test_timeline.cpp  (+1 more)
(+377 files in other folders)
